--- a/android/CallMyGranny/app/src/main/res/layout/activity_main.xml
+++ b/android/CallMyGranny/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:padding="@dimen/padding_default"
+        tools:context=".ui.MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
+    <Button
+            android:id="@+id/contacts"
+            style="@style/Button.Secondary"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
+            android:layout_marginTop="@dimen/padding_small"
+            android:layout_marginBottom="@dimen/padding_small"
+            android:text="@string/choose_contacts_text"
+            app:layout_constraintBottom_toBottomOf="top" />
+
+    <Button
+            android:id="@+id/sync"
+            style="@style/Button.Primary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="@string/sync_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
