--- a/android/CallMyGranny/app/src/main/res/values/styles.xml
+++ b/android/CallMyGranny/app/src/main/res/values/styles.xml
@@ -1,9 +1,11 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar"></style>
+
+    <style name="Button.Primary" parent="Widget.AppCompat.Button">
+    </style>
+
+    <style name="Button.Secondary" parent="Widget.AppCompat.Button">
     </style>
 
 </resources>
