--- a/android/CallMyGranny/app/src/main/res/layout/activity_main.xml
+++ b/android/CallMyGranny/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:layout_marginTop="@dimen/padding_small"
             android:layout_marginBottom="@dimen/padding_small"
             android:text="@string/connect_text"
-            app:layout_constraintBottom_toBottomOf="top" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     <Button
             android:id="@+id/contacts"
@@ -26,7 +26,7 @@
             android:layout_marginTop="@dimen/padding_small"
             android:layout_marginBottom="@dimen/padding_small"
             android:text="@string/choose_contacts_text"
-            app:layout_constraintBottom_toBottomOf="top" />
+            app:layout_constraintTop_toBottomOf="@+id/connect" />
 
     <Button
             android:id="@+id/sync"
